force-app/main/default/objects/License_and_Certifications__c/License_and_Certifications__c.object-meta.xml
<CustomObject>
    <label>License and Certification</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License and Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>