force-app/main/default/objects/License_and_Certifications__c/fields/Caption__c.field-meta.xml
<CustomField>
    <fullName>Caption__c</fullName>
    <label>Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>