force-app/main/default/objects/License_and_Certifications__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>License and Certifications</relationshipLabel>
    <relationshipName>License_and_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>