force-app/main/default/objects/License_and_Certifications__c/fields/ESC_NBC_Prospect__c.field-meta.xml
<CustomField>
    <fullName>ESC_NBC_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>ESC_NBC_Prospect__c</referenceTo>
    <relationshipLabel>License and Certifications</relationshipLabel>
    <relationshipName>Licenses_and_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>