force-app/main/default/objects/License_and_Certifications__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>License and Certifications</relationshipLabel>
    <relationshipName>License_and_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>