force-app/main/default/objects/License_and_Certifications__c/fields/Meta__c.field-meta.xml
<CustomField>
    <fullName>Meta__c</fullName>
    <label>Meta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>