force-app/main/default/objects/License_and_Certifications__c/fields/Prospect_Landing_Zone__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Landing_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect Landing Zone</label>
    <referenceTo>Prospect_Landing_Zone__c</referenceTo>
    <relationshipLabel>License and Certifications</relationshipLabel>
    <relationshipName>License_and_Certifications</relationshipName>
    <type>Lookup</type>
</CustomField>